--- a/arch/arm/dts/k3-j7200-r5-common-proc-board.dts
+++ b/arch/arm/dts/k3-j7200-r5-common-proc-board.dts
@@ -88,3 +88,11 @@
     reg = <0x0 0x47040000 0x0 0x100>,
           <0x0 0x50000000 0x0 0x8000000>;
 };
+
+&mcu_ringacc {
+    ti,sci = <&dm_tifs>;
+};
+
+&mcu_udmap {
+    ti,sci = <&dm_tifs>;
+};
