spl: Introduce architecture specific init function
Some architectures use spl_board_init() in their architecture specific
implementation. Board developers should be able to overwrite
spl_board_init() in their board specific implementation. Hence,
introduce a spl_arch_init() method which is called right before
spl_board_init() for architecture specific implementation.

Signed-off-by: Lukas Funke <lukas.funke@weidmueller.com>

--- a/common/spl/Kconfig
+++ b/common/spl/Kconfig
@@ -272,6 +272,13 @@ config SPL_TEXT_BASE
 	help
 	  The address in memory that SPL will be running from.
 
+config SPL_ARCH_INIT
+	bool "Call arch-specific initialization in SPL"
+	help
+	  If this option is enabled, U-Boot will call the function
+	  spl_arch_init() from board_init_r(). This function should be
+	  provided by the architecture.
+
 config SPL_BOARD_INIT
 	bool "Call board-specific initialization in SPL"
 	help
